# luma

./: .gitignore  README.md  ai-elements-tools.md  docker-compose.yml
backend/: Dockerfile  RATE_LIMITING.md  dockerfile  pyproject.toml
backend/app/: example_data.json  main.py
backend/app/agents/analyst/: __init__.py  agent.py  metrics.py  models.py
backend/app/agents/form_auditor/: __init__.py  agent.py  checks.py  cli.py  models.py
backend/app/agents/web_search/: __init__.py  agent.py  models.py
backend/app/core/: config.py
backend/app/models/: chunking_models.py  dataroom.py  extracted_data.py  file_models.py  schema_models.py  vector_models.py
backend/app/repositories/: __init__.py  schema_repository.py
backend/app/routers/: agent.py  chunking.py  chunking_landingai.py  dataroom.py  extracted_data.py  files.py  schemas.py  vectors.py
backend/app/services/: azure_service.py  chunking_service.py  embedding_service.py  extracted_data_service.py  file_service.py  landingai_service.py  schema_builder_service.py  vector_service.py
backend/app/utils/chunking/: __init__.py  chunk_processor.py  gemini_client.py  pdf_extractor.py  pipeline.py  token_manager.py
backend/app/vector_db/: __init__.py  base.py  factory.py  qdrant_client.py
backend/data/: audit_report.json
backend/data/schemas/: schema_103b7090a542.json  schema_103b7090a545.json
frontend/: Dockerfile  dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
redis_data/: dump.rdb
redis_data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
(+26 files in other folders)
